# nimble-ball-simulation

./: README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/nimble-ball/: nimble_ball.h
src/include/nimble-ball-simulation/: nimble_ball_simulation.h  nimble_ball_simulation_vm.h
src/lib/: CMakeLists.txt  nimble_ball.c  nimble_ball_simulation.c  nimble_ball_simulation_vm.c
src/test/: CMakeLists.txt  test.c  test_vm.c
