cmake_minimum_required(VERSION 3.17)
project(nimble_ball_simulation C)

add_subdirectory("deps/piot/basal-c/src/lib")
add_subdirectory("deps/piot/clog/src/lib")
add_subdirectory("deps/piot/tiny-libc/src/lib")
add_subdirectory("deps/piot/transmute-c/src/lib")
add_subdirectory("lib")
#add_subdirectory("test")
#add_subdirectory("examples")